# python-projects

./: README.md  pyproject.toml
data/raw/PyOptBook/: 正誤表_第二版.md
data/raw/PyOptBook/5.routing_ver2/: routing_ver2.ipynb
notebooks/: pyopt.ipynb  test.ipynb
